@@ -93,6 +93,7 @@ DRVLIBS += $(PINOBJ)/se.o $(PINOBJ)/sesound.o
 DRVLIBS += $(PINOBJ)/s80.o $(PINOBJ)/s80sound0.o $(PINOBJ)/s80sound1.o $(PINOBJ)/s80sound2.o
 DRVLIBS += $(PINOBJ)/by35.o $(PINOBJ)/by35snd.o $(PINOBJ)/byvidpin.o
 DRVLIBS += $(PINOBJ)/by6803.o $(PINOBJ)/by6803snd.o
+DRVLIBS += $(PINOBJ)/hnk.o
 #
 # Games
 #
@@ -100,7 +101,8 @@ PINGAMES  = $(PINOBJ)/by35games.o
 PINGAMES += $(PINOBJ)/s3games.o $(PINOBJ)/s4games.o $(PINOBJ)/s6games.o
 PINGAMES += $(PINOBJ)/s7games.o $(PINOBJ)/s11games.o
 PINGAMES += $(PINOBJ)/degames.o $(PINOBJ)/gts3games.o $(PINOBJ)/s80games.o
-PINGAMES += $(PINOBJ)/segames.o $(PINOBJ)/wpcgames.o
+PINGAMES += $(PINOBJ)/segames.o $(PINOBJ)/wpcgames.o 
+PINGAMES += $(PINOBJ)/hnkgames.o
 #
 # Simulators
 #
